background and border-radius fix

--- a/css/style.css
+++ b/css/style.css
@@ -64,19 +64,31 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 /* line 6, ../sass/style.scss */
+html {
+  background: #000;
+}
+
+/* line 10, ../sass/style.scss */
 body {
   font: 17px/21px -apple-system-font;
   color: #fff;
   background: #222222 url(../img/ajax-loader.gif) no-repeat center center;
   background-size: 33px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -moz-border-radius-bottomleft: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  -moz-border-radius-bottomright: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  overflow: hidden;
 }
 
-/* line 15, ../sass/style.scss */
+/* line 21, ../sass/style.scss */
 nav.main {
   font-size: 16px;
 }
-/* line 18, ../sass/style.scss */
+/* line 24, ../sass/style.scss */
 nav.main ul {
   position: absolute;
   bottom: 0;
@@ -93,7 +105,7 @@ nav.main ul {
   border-bottom-right-radius: 5px;
   overflow: hidden;
 }
-/* line 28, ../sass/style.scss */
+/* line 34, ../sass/style.scss */
 nav.main ul li {
   width: 33%;
   float: left;
@@ -103,37 +115,37 @@ nav.main ul li {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 35, ../sass/style.scss */
+/* line 41, ../sass/style.scss */
 nav.main ul li a {
   display: block;
   padding: 20px;
   color: #fff;
   text-decoration: none;
 }
-/* line 42, ../sass/style.scss */
+/* line 48, ../sass/style.scss */
 nav.main ul li a:hover, nav.main ul li a:focus {
   background: #000;
 }
-/* line 46, ../sass/style.scss */
+/* line 52, ../sass/style.scss */
 nav.main ul li a.active {
   background: #F0CA32;
   color: #222;
 }
-/* line 52, ../sass/style.scss */
+/* line 58, ../sass/style.scss */
 nav.main ul li a.tapped, nav.main ul li a:active {
   background: #fff;
   color: #222;
 }
-/* line 58, ../sass/style.scss */
+/* line 64, ../sass/style.scss */
 nav.main ul li:nth-child(2) {
   width: 34%;
 }
-/* line 62, ../sass/style.scss */
+/* line 68, ../sass/style.scss */
 nav.main ul li:first-child {
   border-left: none;
 }
 
-/* line 70, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .page {
   position: absolute;
   left: 0;
@@ -160,7 +172,7 @@ nav.main ul li:first-child {
   border-radius: 5px;
   -webkit-backface-visibility: hidden;
 }
-/* line 84, ../sass/style.scss */
+/* line 90, ../sass/style.scss */
 .page .showNavigation {
   position: absolute;
   bottom: 20px;
@@ -177,14 +189,14 @@ nav.main ul li:first-child {
   border-radius: 50%;
   -webkit-backface-visibility: hidden;
 }
-/* line 97, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 .page.navShown {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
 }
-/* line 100, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 .page.navShown.slideOut {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
@@ -192,25 +204,25 @@ nav.main ul li:first-child {
   transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
 }
 
-/* line 107, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
 .content {
   font-size: 16px;
   color: #222;
 }
-/* line 111, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 .content h1 {
   margin-bottom: 20px;
   line-height: 1.2em;
   font: 48px/48px -apple-system-font;
   font-weight: 100;
 }
-/* line 120, ../sass/style.scss */
+/* line 126, ../sass/style.scss */
 .content p {
   line-height: 1.6em;
   margin-top: 20px;
   font-weight: normal;
 }
-/* line 125, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 .content p.introduction {
   margin-top: 0;
   font-weight: bold;
@@ -218,7 +230,7 @@ nav.main ul li:first-child {
   line-height: 1.6em;
 }
 
-/* line 135, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 .tabs {
   display: none;
   position: absolute;
@@ -231,7 +243,7 @@ nav.main ul li:first-child {
   padding: 30px 30px 90px;
   font-weight: bold;
 }
-/* line 147, ../sass/style.scss */
+/* line 153, ../sass/style.scss */
 .tabs.active {
   display: block;
 }
