--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,12 +3,18 @@
 @import "compass/css3/transform-legacy";
 @import "compass/utilities/general/clearfix";
 
+html{
+	background: #000;
+}
+
 body{
 	font: 17px/21px -apple-system-font;
 	color: #fff;
 	background: #222 url(../img/ajax-loader.gif) no-repeat center center;
 	background-size: 33px;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
+	@include border-bottom-radius(5px);
+	overflow: hidden;
 }
 
 // Main navigation
