--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,7 @@ nav.main{
 	}
 	
 	&.navShown{
-		@include transform(rotateX(20deg) scale(0.775) translateY(45px));
+		@include transform(rotateX(20deg) scale(0.775));
 		-webkit-transform-origin: 50% 0;
 		-webkit-transform-style: preserve-3d;
 		
