--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,7 +23,7 @@ nav.main{
 	
 	ul{
 		position: absolute;
-		bottom: 0;
+		bottom: 0; 
 		left: 0;
 		right: 0;
 		background: #111;
@@ -90,14 +90,14 @@ nav.main{
 	
 	.showNavigation{
 		position: absolute;
-		bottom: 20px;
-		left: 20px;
+		bottom: 0;
+		right: 0;
 		z-index: 99;
 		display: block;
 		cursor: pointer;
 		background: rgba(0,0,0,0.75);
 		padding: 10px;
-		@include border-radius(50%);
+		//@include border-radius(50%);
 		-webkit-backface-visibility: hidden;
 	}
 	
@@ -152,7 +152,7 @@ nav.main{
 	bottom: 0;
 	-webkit-overflow-scrolling: touch;
 	overflow: auto;
-	padding: 30px 30px 90px;
+	padding: 30px 80px 90px 30px;
 	font-weight: bold;
 	
 	&.active{
